--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -36,7 +36,9 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-php-
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: | 
+        cd ./src/
+        composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Create Database
       run: |
         mkdir -p data
