--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -43,5 +43,5 @@ jobs:
       run: |
         mkdir -p data
         touch data/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      run: vendor/bin/phpunit
+    # - name: Execute tests (Unit and Feature tests) via PHPUnit
+      # run: vendor/bin/phpunit
