--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -43,5 +43,7 @@ jobs:
       run: |
         mkdir -p data
         touch data/database.sqlite
+    - name: Run PHP Application
+      run: php -S localhost:8000 -t ./src/
     # - name: Execute tests (Unit and Feature tests) via PHPUnit
       # run: vendor/bin/phpunit
