--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,15 +38,12 @@ jobs:
         uses: actions/checkout@v3
 
       # Install the cosign tool except on PR
-      - name: Install Symfony
+      - name: Install Symfony CLI
         run: |
-          # Install PHP and Symfony dependencies
-          apt-get update && apt-get install -y \
-            php \
-            composer
-          # Install Symfony CLI
-          wget https://get.symfony.com/cli/installer -O - | bash
-          sudo mv /root/.symfony*/bin/symfony /usr/local/bin/symfony
+          curl -sS https://get.symfony.com/cli/installer | bash
+          mv /home/runner/.symfony/cli /usr/local/bin/symfony
+          symfony --version
+
 
       - name: Copy Symfony project
         run: |
