--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -52,6 +52,7 @@ jobs:
       - name: Copy Symfony project
         run: |
           sudo cp -r ./src /var/www/html
+          composer install --no-scripts --no-autoloader
 
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
