--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           sudo cp -r ./src /var/www/html
           cd /var/www/html/src
-          composer install --no-scripts --no-autoloader
+          sudo composer install --no-scripts --no-autoloader
 
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
