--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -87,7 +87,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: List files
-        run: ls src -la
+        run: ls src/src -la
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
