--- a/.github/workflows/symfony.yml
+++ b/.github/workflows/symfony.yml
@@ -54,12 +54,17 @@ jobs:
         php -S localhost:8000 -t ./src/ &
         sleep 10
         kill $!
-        
-    - name: Monitor Ressource Usage
+
+
+    - name: Monitor Resource Usage
       run: |
-        top -b -n 1 >> resource_usage.txt
-        free -m >> resource_usage.txt
-        df -h >> resource_usage.txt
+        echo "Resource Usage:"
+        echo "CPU Usage:"
+        top -b -n 1 | grep "Cpu(s)"
+        echo "Memory Usage:"
+        free -m
+        echo "Disk Usage:"
+        df -h
 
     # - name: Execute tests (Unit and Feature tests) via PHPUnit
       # run: vendor/bin/phpunit 
