--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,28 @@
 server {
     listen 80;
     server_name localhost;
-    root /var/www/html; # Chemin vers le répertoire racine de votre application
 
-    index index.php index.html index.htm;
+    root /var/www/html/public; # Assure-toi que ce chemin pointe vers le dossier 'public' de Symfony
+    index index.php;
 
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri /index.php$is_args$args;
+    }
+
+    location ~ ^/index\.php(/|$) {
+        fastcgi_pass php-fpm:9000; # Remplace 'php-fpm' par l'adresse IP du service PHP-FPM si nécessaire
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        internal;
     }
 
     location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass php_base:9000; # Nom du conteneur PHP et port
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+        return 404;
     }
 
-    error_log /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/project_error.log;
+    access_log /var/log/nginx/project_access.log;
 }
+
